--- a/src/app/heroes/hero-list/hero-list.component.html
+++ b/src/app/heroes/hero-list/hero-list.component.html
@@ -1,7 +1,7 @@
 <div class="album py-5 bg-light">
-    <div class="container">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
-        <app-card *ngFor="let card of [1,2,3,4,5,6,7,8,9,10]"></app-card>        
-      </div>
+  <div class="container">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3" *ngIf="heroes$ | async as heroes">
+      <app-card *ngFor="let hero of heroes" [source]="hero" [navigate]="'/heroes/detail'"></app-card>
     </div>
   </div>
+</div>
