--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -1,20 +1,16 @@
-<div class="col">
+<div class="col h-100 d-flex" style="cursor: pointer;">
     <div class="card shadow-sm" (click)="cardClicked()">
-        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
-            role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                dy=".3em">Thumbnail</text>
-        </svg>
-
+        <img class="bd-placeholder-img card-img-top h-100" src="{{source?.thumbnail}}" alt="">
         <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
+            <p class="card-text text-truncate" *ngIf="source?.description; else NotFound">{{source?.description}}</p>
+            <ng-template #NotFound>
+                <p class="card-text text-truncate">no information</p>
+            </ng-template>
             <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-secondary">Ver mais</button>
                 </div>
-                <small class="text-muted">9 mins</small>
+                <!-- <small class="text-muted">9 mins</small> -->
             </div>
         </div>
     </div>
