alter color jumbox

--- a/src/app/heroes/hero-detail/hero-detail.component.html
+++ b/src/app/heroes/hero-detail/hero-detail.component.html
@@ -1,7 +1,7 @@
 <div class="p-4 bg-light"
     style="background-image: url({{hero.thumbnail}}); background-size: 215px 215px; background-position: -12% 30%; filter: grayscale(100%); ">
 </div>
-<div class="p-5 bg-dark" style="min-height: 400px;">
+<div class="p-5 text-white bg-dark" style="min-height: 400px;">
     <div class="container-fluid py-5">
         <h1 class="display-5 fw-bold">{{hero.name}}</h1>
         <p class="col-md-8 fs-5">{{hero.description}}</p>
