--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,11 +1,11 @@
-<section class="py-4 text-center container-fluid bg-light">
+<section class="py-4 text-center container-fluid text-white bg-dark" style="min-height: 385px;">
     <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
             <h1 class="fw-light">Personagens Marvel</h1>
             <p class="lead text-muted">
                 Fique viciado em uma generosa porção de heróis e vilões da Marvel! </p>
             <p>
-                <a routerLink="/heroes" class="btn btn-primary my-2">Veja seus Heróis e Vilões</a>
+                <a routerLink="/heroes" class="btn btn-outline-primary my-2">Veja seus Heróis e Vilões</a>
             </p>
         </div>
     </div>
