--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -8,7 +8,7 @@
             </ng-template>
             <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Ver mais</button>
+                    <button type="button" class="btn btn-sm btn-outline-primary">Ver mais</button>
                 </div>
                 <!-- <small class="text-muted">9 mins</small> -->
             </div>
