criado a chamada para Series

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="text-muted py-5">
     <div class="container">        
-        <p class="mb-1"><a href="http://marvel.com">Data provided by Marvel. © 2022 MARVEL</a></p>
+        <p class="mb-1"><a href="http://marvel.com">Dados fornecidos pela Marvel. © 2022 MARVEL</a></p>
     </div>
 </footer>
