--- a/src/app/heroes/hero-list/hero-list.component.html
+++ b/src/app/heroes/hero-list/hero-list.component.html
@@ -2,26 +2,14 @@
   <div class="container">
     <div class="py-4">
       <a [routerLink]="'/home'" title="Voltar">
-        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-arrow-return-left"
+        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-arrow-return-left"
           viewBox="0 0 16 16">
           <path fill-rule="evenodd"
             d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5z" />
         </svg>
       </a>  
     </div>
-    <form class="mb-3" [formGroup]="searchForm" (ngSubmit)="searchHeroes()">
-      <div class="input-group mb-3">
-        <input formControlName="character" type="text" class="form-control border-end-0"
-          placeholder="Busque seu personagem" aria-label="Busque seu personagem" aria-describedby="basic-addon2">
-        <span class="input-group-text bg-white border-start-0" id="basic-addon2">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
-            viewBox="0 0 16 16">
-            <path
-              d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-          </svg>
-        </span>
-      </div>
-    </form>
+    <app-search (searchChange)="searchHeroes($event)"></app-search>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
       <app-card *ngFor="let hero of heroes" [source]="hero" [navigate]="'/heroes/detail'"></app-card>
     </div>
