--- a/src/app/heroes/hero-detail/hero-detail.component.html
+++ b/src/app/heroes/hero-detail/hero-detail.component.html
@@ -10,7 +10,6 @@
                     d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5z" />
             </svg>
         </a>
-
         <h1 class="display-5 fw-bold">{{hero.name}}</h1>
         <p class="col-md-8 fs-5">{{hero.description}}</p>
     </div>
@@ -19,72 +18,23 @@
     style="background-image: url({{hero.thumbnail}}); background-size: 215px 215px; background-position: -12% 30%; filter: grayscale(100%); ">
 </div>
 <div class="container">
-    <hr class="my-5" style="border: 1px solid #c6c6c6;">
     <div class="row g-5">
-        <div class="col-md-8">
+        <div class="col">
             <h3 class="pb-4 mb-4 fst-italic border-bottom">
                 Histórias em Quadrinhos
             </h3>
-            <div class="card mb-3" *ngFor="let comic of comics; let i = index">
-                <ng-container *ngIf="i % 2 == 0; else Layout2">
-                    <div class="row g-0">
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">{{comic.title}}</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to
-                                    additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <img src="{{comic.imgUrl}}" class="img-fluid rounded-end" alt="...">
-                        </div>
-                    </div>
-                </ng-container>
-                <ng-template #Layout2>
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="{{comic.imgUrl}}" class="w-75 img-fluid rounded-start" alt="...">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">{{comic.title}}</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to
-                                    additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                            </div>
-                        </div>
-                    </div>
-                </ng-template>
-            </div>
-
-        </div>
-
-        <div class="col-md-4">
-            <div class="position-sticky" style="top: 2rem;">
-                <div class="p-4 mb-3 bg-light rounded">
-                    <h4 class="fst-italic">About</h4>
-                    <p class="mb-0">Customize this section to tell your visitors a little bit about your publication,
-                        writers, content, or something else entirely. Totally up to you.</p>
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                <div class="d-flex flex-column align-items-center justify-content-center" *ngFor="let comic of comics">
+                    <img src="{{comic.imgUrl}}" width="180" class="bd-placeholder-img h-100" alt="...">
+                    <h5 class="text-center my-4">{{comic.title}}</h5>
+                    <!-- <p class="text-center">{{comic.description}}</p> -->
+                    <p>ISBN: <span>{{comic.isbn}}</span></p>
+                    <p>EAN: <span>{{comic.ean}}</span></p>
+                    <p>Formato: <span>{{comic.format}}</span></p>
+                    <p>Páginas: <span>{{comic.pageCount}}</span></p>
                 </div>
-
             </div>
+            <hr class="mt-4" style="border: 1px solid #c6c6c6;">
         </div>
     </div>
-</div>
-<div class="container marketing">
-    <hr class="my-5" style="border: 1px solid #c6c6c6;">
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-        <div class="d-flex flex-column align-items-center justify-content-center" *ngFor="let comic of comics">
-            <img src="{{comic.imgUrl}}" width="140" height="140" class="bd-placeholder-img rounded-circle" alt="...">
-            <h5 class="my-4">{{comic.title}}</h5>
-            <p class="text-center">Some representative placeholder content for the three columns of text below the
-                carousel. This is the
-                first column.</p>
-            <p class="my-4"><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-        </div>
-    </div>
-    <hr class="mt-5" style="border: 1px solid #c6c6c6;">
 </div>
