--- a/src/app/heroes/hero-list/hero-list.component.html
+++ b/src/app/heroes/hero-list/hero-list.component.html
@@ -1,5 +1,5 @@
-<div class="album bg-light">
-  <div class="container">
+<div class="album ">
+  <div class="container pb-4">
     <div class="py-4">
       <a [routerLink]="'/home'" title="Voltar">
         <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-arrow-return-left"
