criado o componente loader

--- a/src/app/heroes/hero-detail/hero-detail.component.html
+++ b/src/app/heroes/hero-detail/hero-detail.component.html
@@ -1,40 +1,50 @@
-<div class="p-4 bg-light"
-    style="background-image: url({{hero.thumbnail}}); background-size: 215px 215px; background-position: -12% 30%; filter: grayscale(100%); ">
-</div>
-<div class="p-5 text-white bg-dark" style="min-height: 385px;">
-    <div class="container py-5">
-        <a [routerLink]="'/heroes/list'" class="position-relative" style="top: -65px;" title="Voltar">
-            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor"
-                class="bi bi-arrow-return-left" viewBox="0 0 16 16">
-                <path fill-rule="evenodd"
-                    d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5z" />
-            </svg>
-        </a>
-        <h1 class="display-5 fw-bold">{{hero.name}}</h1>
-        <p class="col-md-8 fs-5">{{hero.description}}</p>
+<ng-container *ngIf="hero; else loader">
+    <div class="p-4 bg-light"
+        style="background-image: url({{hero.thumbnail}}); background-size: 215px 215px; background-position: -12% 30%; filter: grayscale(100%); ">
     </div>
-</div>
-<div class="p-4 mb-4 bg-light"
-    style="background-image: url({{hero.thumbnail}}); background-size: 215px 215px; background-position: -12% 30%; filter: grayscale(100%); ">
-</div>
+    <div class="p-5 text-white bg-dark" style="min-height: 385px;">
+        <div class="container py-5">
+            <a [routerLink]="'/heroes/list'" class="position-relative" style="top: -65px;" title="Voltar">
+                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor"
+                    class="bi bi-arrow-return-left" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5z" />
+                </svg>
+            </a>
+            <h1 class="display-5 fw-bold">{{hero.name}}</h1>
+            <p class="col-md-8 fs-5">{{hero.description}}</p>
+        </div>
+    </div>
+    <div class="p-4 mb-4 bg-light"
+        style="background-image: url({{hero.thumbnail}}); background-size: 215px 215px; background-position: -12% 30%; filter: grayscale(100%); ">
+    </div>
+</ng-container>
 <div class="container">
     <div class="row g-5">
         <div class="col">
             <h3 class="pb-4 mb-4 fst-italic border-bottom">
                 Histórias em Quadrinhos
             </h3>
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                <div class="d-flex flex-column align-items-center justify-content-center" *ngFor="let comic of comics">
-                    <img src="{{comic.imgUrl}}" width="180" class="bd-placeholder-img h-100" alt="...">
-                    <h5 class="text-center my-4">{{comic.title}}</h5>
-                    <!-- <p class="text-center">{{comic.description}}</p> -->
-                    <p>ISBN: <span>{{comic.isbn}}</span></p>
-                    <p>EAN: <span>{{comic.ean}}</span></p>
-                    <p>Formato: <span>{{comic.format}}</span></p>
-                    <p>Páginas: <span>{{comic.pageCount}}</span></p>
+            <ng-container *ngIf="comics.length > 0; else loader">
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                    <div class="d-flex flex-column align-items-center justify-content-center"
+                        *ngFor="let comic of comics">
+                        <img src="{{comic.imgUrl}}" width="180" class="bd-placeholder-img h-100" alt="...">
+                        <h5 class="text-center my-4">{{comic.title}}</h5>
+                        <!-- <p class="text-center">{{comic.description}}</p> -->
+                        <p>ISBN: <span>{{comic.isbn}}</span></p>
+                        <p>EAN: <span>{{comic.ean}}</span></p>
+                        <p>Formato: <span>{{comic.format}}</span></p>
+                        <p>Páginas: <span>{{comic.pageCount}}</span></p>
+                    </div>
                 </div>
-            </div>
+            </ng-container>
+
+
             <hr class="mt-4" style="border: 1px solid #c6c6c6;">
         </div>
     </div>
 </div>
+<ng-template #loader>
+    <app-loader></app-loader>
+</ng-template>
