--- a/src/app/heroes/hero-list/hero-list.component.html
+++ b/src/app/heroes/hero-list/hero-list.component.html
@@ -2,16 +2,21 @@
   <div class="container pb-4">
     <div class="py-4">
       <a [routerLink]="'/home'" title="Voltar">
-        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-arrow-return-left"
-          viewBox="0 0 16 16">
+        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor"
+          class="bi bi-arrow-return-left" viewBox="0 0 16 16">
           <path fill-rule="evenodd"
             d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5z" />
         </svg>
-      </a>  
+      </a>
     </div>
     <app-search (searchChange)="searchHeroes($event)"></app-search>
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
-      <app-card *ngFor="let hero of heroes" [source]="hero" [navigate]="'/heroes/detail'"></app-card>
-    </div>
+    <ng-container *ngIf="heroes.length > 0; else loader">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
+        <app-card *ngFor="let hero of heroes" [source]="hero" [navigate]="'/heroes/detail'"></app-card>
+      </div>
+    </ng-container>
+    <ng-template #loader>
+      <app-loader></app-loader>
+    </ng-template>
   </div>
 </div>
